src/test/NotAssigned2/NotAssigned2.expected
error: NotAssigned2.panda:266:16: variable 'ricochet' may not have been assigned
1 error
